cabal-version:       3.0

name:                debug-flat
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              kwxm
maintainer:          kenneth.mackenzie@iohk.io
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable debug-flat
  main-is:             Main.hs
  other-modules:       Data
  ghc-options:         -W
  build-depends:       base
                     , bytestring
                     , cborg
                     , deepseq
                     , mtl
                     , serialise
                     , text

                     
  -- hs-source-dirs:
  default-language:    Haskell2010
